force-app/main/default/objects/Reponse_questionnaire__c/Reponse_questionnaire__c.object-meta.xml
<CustomObject>
    <description>Réponses faites par les clients pour un questionnaire (SATCLI, autre...)</description>
    <label>Réponse questionnaire</label>
    <nameField>
        <displayFormat>RESP/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Réponses questionnaire</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>