force-app/main/default/objects/Reponse_questionnaire__c/fields/cumulSatisfait__c.field-meta.xml
<CustomField>
    <fullName>cumulSatisfait__c</fullName>
    <description>Cocher si la réponse entraîne une satisfaction positive (valeur numéro supérieur ou égal à 7). 
Utilisé pour les rapports.</description>
    <formula>NOT(ISBLANK(reponseNumero__c)) &amp;&amp; reponseNumero__c &gt;= 7</formula>
    <label>Cumul Satisfait</label>
    <type>Checkbox</type>
</CustomField>