force-app/main/default/objects/Reponse_questionnaire__c/fields/NPSNegatif__c.field-meta.xml
<CustomField>
    <fullName>NPSNegatif__c</fullName>
    <description>Cocher si la réponse entraîne un NPS négatif (valeur numéro inférieur ou égal à 6).
Utilisé pour les rapports.</description>
    <formula>NOT(ISBLANK(reponseNumero__c)) &amp;&amp; reponseNumero__c&lt;=6</formula>
    <label>NPS (négatif)</label>
    <type>Checkbox</type>
</CustomField>