force-app/main/default/objects/Reponse_questionnaire__c/fields/NPSPositif__c.field-meta.xml
<CustomField>
    <fullName>NPSPositif__c</fullName>
    <description>Cocher si la réponse entraîne un NPS positif (valeur numéro supérieur ou égal à 9).
Utilisé pour les rapports.</description>
    <formula>NOT(ISBLANK(reponseNumero__c)) &amp;&amp; reponseNumero__c&gt;=9</formula>
    <label>NPS (positif)</label>
    <type>Checkbox</type>
</CustomField>