force-app/main/default/objects/Reponse_questionnaire__c/fields/Ordre__c.field-meta.xml
<CustomField>
    <fullName>Ordre__c</fullName>
    <formula>LPAD(BLANKVALUE(TEXT(question__r.page__c), &apos;0&apos;), 2, &apos;0&apos;) 
+ &apos;.&apos; + 
LPAD(BLANKVALUE(TEXT(question__r.ordre__c), &apos;0&apos;), 2, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordre</label>
    <type>Text</type>
</CustomField>