force-app/main/default/objects/Reponse_questionnaire__c/fields/question__c.field-meta.xml
<CustomField>
    <fullName>question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question_questionnaire__c</referenceTo>
    <relationshipLabel>Réponses questionnaire</relationshipLabel>
    <relationshipName>Reponses_questionnaire</relationshipName>
    <type>Lookup</type>
</CustomField>