force-app/main/default/objects/Reponse_questionnaire__c/fields/questionTexte__c.field-meta.xml
<CustomField>
    <fullName>questionTexte__c</fullName>
    <formula>question__r.question__c</formula>
    <label>Question (Texte)</label>
    <type>Text</type>
</CustomField>