force-app/main/default/objects/Reponse_questionnaire__c/fields/reponseBoolean__c.field-meta.xml
<CustomField>
    <fullName>reponseBoolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Réponse Boolean</label>
    <type>Checkbox</type>
</CustomField>