force-app/main/default/objects/Reponse_questionnaire__c/fields/reponseDate__c.field-meta.xml
<CustomField>
    <fullName>reponseDate__c</fullName>
    <label>Réponse Date</label>
    <type>DateTime</type>
</CustomField>