force-app/main/default/objects/Reponse_questionnaire__c/fields/reponseNumero__c.field-meta.xml
<CustomField>
    <fullName>reponseNumero__c</fullName>
    <label>Réponse Numéro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>