force-app/main/default/objects/Reponse_questionnaire__c/fields/reponseTexte__c.field-meta.xml
<CustomField>
    <fullName>reponseTexte__c</fullName>
    <label>Réponse Texte</label>
    <length>31000</length>
    <type>LongTextArea</type>
</CustomField>