force-app/main/default/objects/Reponse_questionnaire__c/fields/resume__c.field-meta.xml
<CustomField>
    <fullName>resume__c</fullName>
    <label>Résumé</label>
    <referenceTo>Resume_questionnaire__c</referenceTo>
    <relationshipLabel>Réponses questionnaire</relationshipLabel>
    <relationshipName>Reponses_questionnaire</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>