force-app/main/default/objects/Reponse_questionnaire__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Texte</fullName>
            </value>
            <value>
                <fullName>Case à cocher</fullName>
            </value>
            <value>
                <fullName>Numéro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>